module-system/sov-modules-macros/tests/rpc/expose_rpc_associated_type_not_static.stderr
error[E0310]: the parameter type `T` may not live long enough
   --> tests/rpc/expose_rpc_associated_type_not_static.rs:100:1
    |
100 | #[expose_rpc]
    | ^^^^^^^^^^^^^
    | |
    | the parameter type `T` must be valid for the static lifetime...
    | ...so that the type `T` will meet its required lifetime bounds
    |
    = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider adding an explicit lifetime bound
    |
103 | struct Runtime<S: Spec, T: TestSpec + 'static> {
    |                                     +++++++++
